Add Severity enum, ServiceFailureException, and all required using statements; update project references per architecture; resolve all build errors

--- a/MyShoppingApp.Application/MyShoppingApp.Application.csproj
+++ b/MyShoppingApp.Application/MyShoppingApp.Application.csproj
@@ -1,5 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\MyShoppingApp.Domain\MyShoppingApp.Domain.csproj" />
+    <ProjectReference Include="..\MyShoppingApp.Shared\MyShoppingApp.Shared.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
