--- a/MyShoppingApp.Infrastructure/MyShoppingApp.Infrastructure.csproj
+++ b/MyShoppingApp.Infrastructure/MyShoppingApp.Infrastructure.csproj
@@ -1,5 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\MyShoppingApp.Application\MyShoppingApp.Application.csproj" />
+    <ProjectReference Include="..\MyShoppingApp.Domain\MyShoppingApp.Domain.csproj" />
+    <ProjectReference Include="..\MyShoppingApp.Shared\MyShoppingApp.Shared.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
