--- a/MyShoppingApp.Web/MyShoppingApp.Web.csproj
+++ b/MyShoppingApp.Web/MyShoppingApp.Web.csproj
@@ -1,5 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <ItemGroup>
+    <ProjectReference Include="..\MyShoppingApp.Application\MyShoppingApp.Application.csproj" />
+    <ProjectReference Include="..\MyShoppingApp.Shared\MyShoppingApp.Shared.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
