--- a/MyShoppingApp.Infrastructure/MyShoppingApp.Infrastructure.csproj
+++ b/MyShoppingApp.Infrastructure/MyShoppingApp.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="supabase" Version="1.1.1" />
+    <PackageReference Include="Supabase.Postgrest" Version="4.0.3" />
   </ItemGroup>
 
   <PropertyGroup>
